--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   --works-line-color: #eeeeee;
   --icons-color: #afb1b8;
   --icons-footer-bg: rgba(255, 255, 255, 0.1);
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
+  --btn-hero-hover: #188ce8;
+  --bg-overflow-works: rgba(33, 150, 243, 0.9);
+  --backdrop-color: rgba(0, 0, 0, 0.2);
 }
 h1,
 h2,
@@ -108,42 +112,41 @@ body {
 }
 
 .site-nav .link {
-  /*position: relative;*/
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  align-items: center;
   color: var(--title-text-color);
   letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 1.14;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--cubic);
 }
 
 .address-header .link {
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  align-items: center;
   color: var(--primary-text-color);
   letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 1.14;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--cubic);
 }
 .site-nav .link.current {
-  color: var(--accent-color);
   position: relative;
+  color: var(--accent-color);
 }
 .site-nav .link.current::after {
   content: "";
-  background-color: var(--accent-color);
   position: absolute;
   width: 100%;
   height: 5px;
   bottom: 0;
   left: 0;
   border-radius: 2px;
+  background-color: var(--accent-color);
 }
 .site-nav .link:hover,
 .address .link:hover,
@@ -169,22 +172,22 @@ body {
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--secondary-bg-color);
-  letter-spacing: 0.06em;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  max-width: 1600px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-position: center;
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-color: var(--secondary-bg-color);
+  letter-spacing: 0.06em;
 }
 .hero-title {
   margin-bottom: 30px;
+  text-align: center;
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   text-transform: uppercase;
 }
 
@@ -203,11 +206,11 @@ body {
   line-height: 1.87;
   cursor: pointer;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms var(--cubic);
 }
 .button-hero:hover,
 .button-hero:focus {
-  background-color: #188ce8;
+  background-color: var(--btn-hero-hover);
 }
 
 /*section*/
@@ -237,7 +240,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f4fa;
+  background-color: var(--grey-bg-color);
   margin-bottom: 30px;
 }
 .feautures-svg {
@@ -298,7 +301,7 @@ body {
   margin-left: 30px;
 }
 .team .item {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
   /*border: 1px solid var(--team-line-color);*/
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -306,19 +309,17 @@ body {
 }
 .networks {
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
   margin-top: 16px;
 }
 .networks-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
   color: var(--icons-color);
   border-radius: 50px;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic);
 }
 .networks-link:hover,
 .networks-link:focus {
@@ -344,14 +345,14 @@ body {
 .link-clients {
   padding: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px solid var(--icons-color);
   color: var(--icons-color);
   width: 170px;
   height: 92px;
   border-radius: 4px;
-  justify-content: center;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--cubic), border 250ms var(--cubic);
 }
 .link-clients:hover,
 .link-clients:focus {
@@ -368,9 +369,9 @@ body {
 }
 /* footer */
 .footer {
-  background-color: var(--secondary-bg-color);
   padding-bottom: 60px;
   padding-top: 60px;
+  background-color: var(--secondary-bg-color);
 }
 .footer .logo {
   display: inline-block;
@@ -418,7 +419,7 @@ body {
   color: var(--primary-white-color);
   border-radius: 50px;
   background-color: var(--icons-footer-bg);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic);
 }
 .networks-footer .networks-link:hover,
 .networks-footer .networks-link:focus {
@@ -439,10 +440,11 @@ body {
 }
 
 .button-portfolio .btn {
-  border-radius: 4px;
   padding: 6px 22px;
+  transition: box-shadow 250ms var(--cubic), background-color 250ms var(--cubic), color 250ms var(--cubic);
   text-align: center;
   min-width: 73px;
+  border-radius: 4px;
   font-family: inherit;
   background-color: var(--grey-bg-color);
   color: var(--title-text-color);
@@ -451,8 +453,6 @@ body {
   line-height: 1.62;
   cursor: pointer;
   border: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-portfolio .btn:hover,
 .button-portfolio .btn:focus {
@@ -506,29 +506,31 @@ body {
   position: absolute;
   top: 0;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms var(--cubic);
   width: 100%;
   height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: var(--bg-overflow-works);
 }
 .works .portfolio-link:hover .overflow,
 .works .portfolio-link:focus .overflow {
   transform: translateY(0);
 }
 .works .item {
-  width: calc((100% - 90px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+  width: calc((100% - 90px) / 3);
   border: 1px solid var(--works-line-color);
 }
 .portfolio-link {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms var(--cubic);
 }
 .works .portfolio-link:hover,
 .works .portfolio-link:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
+
+/*Modal*/
 
 .backdrop {
   position: fixed;
@@ -536,18 +538,42 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--backdrop-color);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms var(--cubic), visibility 250ms var(--cubic);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms;
   min-width: 528px;
   min-height: 581px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--primary-white-color);
 }
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+.close-modal {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
